--- a/beetsplug/lastgenre/genres-tree.yaml
+++ b/beetsplug/lastgenre/genres-tree.yaml
@@ -159,7 +159,9 @@
 - comedy:
     - comedy music
     - comedy rock
+    - humor
     - parody music
+    - stand-up
 - country:
     - alternative country:
         - cowpunk
