Disable PyPy on Travis
Something seems to be wrong: there's a "fatal RPython error" that I can't
reproduce locally.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ matrix:
           env: {TOX_ENV: py26}
         - python: 2.7
           env: {TOX_ENV: py27cov, COVERAGE: 1}
-        - python: pypy
-          env: {TOX_ENV: pypy}
+#        - python: pypy
+#          env: {TOX_ENV: pypy}
         - python: 2.7
           env: {TOX_ENV: docs}
         - python: 2.7
