--- a/beetsplug/lastgenre/genres-tree.yaml
+++ b/beetsplug/lastgenre/genres-tree.yaml
@@ -156,14 +156,14 @@
     - timba
     - twoubadou
     - zouk
-- classic:
+- classical:
     - ballet
     - baroque:
         - baroque music
     - cantata
     - chamber music:
         - string quartet
-    - classical
+    - classic
     - classical music
     - concerto:
         - concerto grosso
