--- a/beetsplug/lastgenre/genres-tree.yaml
+++ b/beetsplug/lastgenre/genres-tree.yaml
@@ -175,7 +175,8 @@
         - symphonic
         - symphony
     - organum
-    - requiem
+    - mass:
+        - requiem
     - sacred music:
         - cantique
         - gregorian chant
