--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ matrix:
 # deps. We only install dependencies from apt for actual test runs, not for
 # docs and style checkers.
 before_install:
-    - "[ ! -z $NONTEST ] && travis_retry sudo apt-get update || true"
-    - "[ ! -z $NONTEST ] && travis_retry sudo apt-get install -qq bash-completion mp3gain || true"
+    - "[ -z $NONTEST ] && travis_retry sudo apt-get update || true"
+    - "[ -z $NONTEST ] && travis_retry sudo apt-get install -qq bash-completion mp3gain || true"
     - "[ ! -z $COVERAGE ] && travis_retry pip install coveralls || true"
 
 # To install dependencies, tell tox to do everything but actually running the
