Tox: Do not conflate 2.6 with `setup.py test`
It was confusing to have different ways of running the tests for the two
versions. This also reduced the verbosity, making Travis' web interface more
useful.

--- a/tox.ini
+++ b/tox.ini
@@ -17,14 +17,12 @@ deps =
     rarfile
     responses
 commands =
-    nosetests -v {posargs}
+    nosetests {posargs}
 
 [testenv:py26]
 deps =
     {[testenv]deps}
     unittest2
-commands =
-    python ./setup.py test {posargs}
 
 [testenv:py27cov]
 basepython = python2.7
@@ -32,7 +30,12 @@ deps =
     {[testenv]deps}
     coverage
 commands =
-    nosetests -v --with-coverage {posargs}
+    nosetests --with-coverage {posargs}
+
+[testenv:py27setup]
+basepython = python2.7
+commands =
+    python ./setup.py test {posargs}
 
 [testenv:docs]
 changedir = docs
