Style fixes for pep8 1.6

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,5 @@ eval-attr="!=slow"
 [flake8]
 # E241  missing whitespace after ',' (used to align visually)
 # E221  multiple spaces before operator (used to align visually)
-ignore=E241,E221
+# E731  do not assign a lambda expression, use a def
+ignore=E241,E221,E731
