Drop Python 2.6 support
See PR #1366 and PR #1390 for a thorough explanation.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py26, py27, pypy, docs, flake8
+envlist = py27, pypy, docs, flake8
 
 [testenv]
 deps =
@@ -18,11 +18,6 @@ deps =
     responses
 commands =
     nosetests {posargs}
-
-[testenv:py26]
-deps =
-    {[testenv]deps}
-    unittest2
 
 [testenv:py27cov]
 basepython = python2.7
