Sort can ignore case if configured to do so
- Config option `sort_ignore_case`
- Default behavior was (and is) case sensitive

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -67,6 +67,7 @@ time_format: '%Y-%m-%d %H:%M:%S'
 
 sort_album: albumartist+ album+
 sort_item: artist+ album+ disc+ track+
+sort_ignore_case: no
 
 paths:
     default: $albumartist/$album%aunique{}/$track $title
