--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -67,7 +67,7 @@ time_format: '%Y-%m-%d %H:%M:%S'
 
 sort_album: albumartist+ album+
 sort_item: artist+ album+ disc+ track+
-sort_ignore_case: no
+sort_case_insensitive: yes
 
 paths:
     default: $albumartist/$album%aunique{}/$track $title
