--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
         - PYTHON: "C:\\Python27"
           TOXENV: py27
 
-# Install Pip to install Tox.
+# Install Tox for running tests.
 install:
     - "%PYTHON%/Scripts/pip.exe install tox"
 
