Temporarily disable pypy on Travis
Another RPython failure inside PyPy that I can't reproduce locally. :(

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, pypy, docs, flake8
+envlist = py27, docs, flake8
+# pypy temporarily disabled
 
 [testenv]
 deps =
