Re-enable pypy in tox
This wasn't a problem and my fix didn't work anyway. :flushed:

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, docs, flake8
-# pypy temporarily disabled
+envlist = py27, pypy, docs, flake8
 
 [testenv]
 deps =
