--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+sudo: false
 
 branches:
     only:
@@ -15,12 +16,15 @@ matrix:
         - python: 2.7
           env: {TOX_ENV: flake8, NONTEST: 1}
 
-# Get the infrastructure for running tests, and the non-Python (and external)
-# deps. We only install dependencies from apt for actual test runs, not for
-# docs and style checkers.
+# Non-Python dependencies.
+addons:
+    apt:
+        packages:
+            - bash-completion
+            - mp3gain
+
+# Coverage reporting library.
 before_install:
-    - "[ -z $NONTEST ] && travis_retry sudo apt-get update || true"
-    - "[ -z $NONTEST ] && travis_retry sudo apt-get install -qq bash-completion mp3gain || true"
     - "[ ! -z $COVERAGE ] && travis_retry pip install coveralls || true"
 
 # To install dependencies, tell tox to do everything but actually running the
