--- a/beetsplug/lastgenre/genres-tree.yaml
+++ b/beetsplug/lastgenre/genres-tree.yaml
@@ -147,7 +147,6 @@
     - punta
     - punta rock
     - rasin
-    - reggae
     - reggaeton
     - salsa
     - soca
@@ -504,12 +503,10 @@
     - new school hip hop
     - old school hip hop
     - political hip hop
-    - ragga
     - rap opera
     - rap rock:
         - rap metal
         - rapcore
-    - reggae español/spanish reggae
     - songo-salsa
     - southern hip hop:
         - atlanta hip hop:
@@ -734,10 +731,14 @@
     - surf rock
     - visual kei:
         - nagoya kei
-- ska:
-    - 2 tone
-    - dancehall
-    - dub
-    - lovers rock
+- reggae:
+    - roots reggae
     - reggae fusion
-    - rocksteady
+    - reggae español/spanish reggae
+    - lovers rock
+    - ragga
+    - dancehall
+    - ska:
+        - 2 tone
+        - dub
+        - rocksteady
