lastgenre: Add `raggamuffin`.
Already recognised by the genres.txt whitelist, and is a more proper
term for `ragga`.

https://en.wikipedia.org/wiki/Ragga

--- a/beetsplug/lastgenre/genres-tree.yaml
+++ b/beetsplug/lastgenre/genres-tree.yaml
@@ -736,7 +736,8 @@
     - reggae fusion
     - reggae español/spanish reggae
     - lovers rock
-    - ragga
+    - raggamuffin:
+        - ragga
     - dancehall
     - ska:
         - 2 tone
