lastgenre: Clean up Spanish reggae in the genre list.
* Add missing subgenres to whitelist and tree.
* Use proper terminology.
  * Add English term as child of Spanish one.

Source: https://en.wikipedia.org/wiki/Reggae_en_Espa%C3%B1ol

--- a/beetsplug/lastgenre/genres-tree.yaml
+++ b/beetsplug/lastgenre/genres-tree.yaml
@@ -734,7 +734,11 @@
 - reggae:
     - roots reggae
     - reggae fusion
-    - reggae español/spanish reggae
+    - reggae en español:
+        - spanish reggae
+        - reggae 110
+        - reggae bultrón
+        - romantic flow
     - lovers rock
     - raggamuffin:
         - ragga
