Links to beets.io

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: redcarpet
 redcarpet:
     extensions: [smart]
-url: http://beets.radbox.org
+url: http://beets.io
 permalink: /blog/:title.html
