--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -22,6 +22,7 @@ import:
     flat: no
     group_albums: no
     pretend: false
+    musicbrainz_ids: []
 
 clutter: ["Thumbs.DB", ".DS_Store"]
 ignore: [".*", "*~", "System Volume Information"]
