Add __future__ import style checker
This adds the [flake8-future-import][f] plugin for flake8, which enforces the
standard set of `__future__` imports at the top of all Python files. This
revealed a fair number of files that need to be fixed.

To be revisited after #1887 is merged.

[f]: https://github.com/xZise/flake8-future-import

--- a/tox.ini
+++ b/tox.ini
@@ -47,4 +47,5 @@ commands =
 [testenv:flake8]
 deps =
     flake8
+    flake8-future-import
 commands = flake8 beets beetsplug beet test setup.py docs
