--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     flask
     mock
     nose
+    nose-show-skipped
     pyechonest
     pylast
     rarfile
@@ -29,7 +30,7 @@ deps =
     {[testenv]deps}
     coverage
 commands =
-    nosetests --with-coverage {posargs}
+    nosetests --show-skipped --with-coverage {posargs}
 
 [testenv:py27setup]
 basepython = python2.7
