Add flake8 check for blind excepts
Add flake8 check for blind excepts using flake8-blind-except (B901).

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,7 @@ deps =
     flake8
     flake8-coding
     flake8-future-import
+    flake8-blind-except
     pep8-naming
 files = beets beetsplug beet test setup.py docs
 
