--- a/tox.ini
+++ b/tox.ini
@@ -48,4 +48,5 @@ commands =
 deps =
     flake8
     flake8-future-import
+    pep8-naming
 commands = flake8 beets beetsplug beet test setup.py docs
