--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -46,6 +46,7 @@ timeout: 5.0
 per_disc_numbering: no
 verbose: 0
 terminal_encoding:
+terminal_decoding:
 original_date: no
 id3v23: no
 va_name: "Various Artists"
