Add flake8 check for quotes
Add flake8 check for quotes using flake8-quotes (Q000).

--- a/tox.ini
+++ b/tox.ini
@@ -48,5 +48,6 @@ commands =
 deps =
     flake8
     flake8-future-import
+    flake8-quotes
     pep8-naming
 commands = flake8 beets beetsplug beet test setup.py docs
