--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, pypy, docs, flake8
+envlist = py27, pypy, docs, flake8, pydocstyle
 
 [testenv]
 deps =
@@ -50,3 +50,8 @@ deps =
     flake8-future-import
     pep8-naming
 commands = flake8 beets beetsplug beet test setup.py docs
+
+[testenv:pydocstyle]
+deps =
+    pydocstyle
+commands = pydocstyle beets beetsplug beet test setup.py docs
