Ignore return code from pydocstyle

--- a/tox.ini
+++ b/tox.ini
@@ -54,4 +54,5 @@ commands = flake8 beets beetsplug beet test setup.py docs
 [testenv:pydocstyle]
 deps =
     pydocstyle
-commands = pydocstyle beets beetsplug beet test setup.py docs
+commands =
+    -pydocstyle beets beetsplug beet test setup.py docs
