--- a/tox.ini
+++ b/tox.ini
@@ -21,28 +21,23 @@ deps =
     pyxdg
     jellyfish
     python-mpd2
-commands =
-    nosetests {posargs}
+commands = nosetests {posargs}
 
 [testenv:py27cov]
 basepython = python2.7
 deps =
     {[testenv]deps}
     coverage
-commands =
-    nosetests --show-skipped --with-coverage {posargs}
+commands = nosetests --show-skipped --with-coverage {posargs}
 
 [testenv:py27setup]
 basepython = python2.7
-commands =
-    python ./setup.py test {posargs}
+commands = python ./setup.py test {posargs}
 
 [testenv:docs]
 changedir = docs
-deps =
-    sphinx
-commands =
-    sphinx-build -W -q -b html . {envtmpdir}/html
+deps = sphinx
+commands = sphinx-build -W -q -b html . {envtmpdir}/html
 
 [testenv:flake8]
 deps =
