Move single line properties to the same line as the key

--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,5 @@ deps =
 commands = flake8 beets beetsplug beet test setup.py docs
 
 [testenv:pydocstyle]
-deps =
-    pydocstyle
-commands =
-    -pydocstyle beets beetsplug beet test setup.py docs
+deps = pydocstyle
+commands = -pydocstyle beets beetsplug beet test setup.py docs
