--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ after_success:
     - "[ ! -z $COVERAGE ] && codecov || true"
 
 cache:
+    pip: true
     directories:
         - .tox
-        - $HOME/.pip-cache/
 
 notifications:
     irc:
