Add `ignore_hidden` configuration property
Add `ignore_hidden` top level configuration property, allowing hidden
files to be ignored on import.

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -26,6 +26,7 @@ import:
 
 clutter: ["Thumbs.DB", ".DS_Store"]
 ignore: [".*", "*~", "System Volume Information"]
+ignore_hidden: yes
 replace:
     '[\\/]': _
     '^\.': _
