--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,17 +4,31 @@ deploy: off
 
 environment:
     matrix:
-        - PYTHON: "C:\\Python27"
-          TOXENV: py27
+        - PYTHON: C:\Python27
+          TOX_ENV: py27-test
+          TOX_ARGS: --show-skipped
+        - PYTHON: C:\Python33
+          TOX_ENV: py33-test
+          TOX_ARGS: --show-skipped
+        - PYTHON: C:\Python34
+          TOX_ENV: py34-test
+          TOX_ARGS: --show-skipped
+        - PYTHON: C:\Python35
+          TOX_ENV: py35-test
+          TOX_ARGS: --show-skipped
 
 # Install Tox for running tests.
 install:
     - "%PYTHON%/Scripts/pip.exe install tox"
+    - "%PYTHON%/Scripts/tox.exe -e %TOX_ENV% --notest"
 
 test_script:
-    - "%PYTHON%/Scripts/tox.exe"
+    - "%PYTHON%/Scripts/tox.exe -e %TOX_ENV% -- %TOX_ARGS%"
 
 # Allow all failures for now: the tests don't yet pass!
 matrix:
     allow_failures:
-        - TOXENV: py27
+        - TOX_ENV: py27-test
+        - TOX_ENV: py33-test
+        - TOX_ENV: py34-test
+        - TOX_ENV: py35-test
