--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,9 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, pypy, docs, flake8
+envlist = test, flake8, docs
 
-[testenv]
+[_test]
 deps =
     beautifulsoup4
     flask
@@ -21,27 +21,24 @@ deps =
     pyxdg
     jellyfish
     python-mpd2
-commands = nosetests {posargs}
-
-[testenv:py27cov]
-basepython = python2.7
-deps =
-    {[testenv]deps}
     coverage
-commands = nosetests --show-skipped --with-coverage {posargs}
 
-[testenv:py27setup]
-basepython = python2.7
-commands = python ./setup.py test {posargs}
-
-[testenv:docs]
-changedir = docs
-deps = sphinx
-commands = sphinx-build -W -q -b html . {envtmpdir}/html
-
-[testenv:flake8]
+[_flake8]
 deps =
     flake8
     flake8-future-import
     pep8-naming
-commands = flake8 beets beetsplug beet test setup.py docs
+files = beets beetsplug beet test setup.py docs
+
+[testenv]
+deps =
+    test: {[_test]deps}
+    flake8: {[_flake8]deps}
+commands =
+    test: nosetests {posargs}
+    flake8: flake8 {posargs:--min-version=2.7} {[_flake8]files}
+
+[testenv:docs]
+basepython = python2.7
+deps = sphinx
+commands = sphinx-build -W -q -b html docs {envtmpdir}/html {posargs}
