--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, pypy, docs, flake8
+envlist = py27cov, docs, flake8
 
 [testenv]
 deps =
