Add python 3.5 tests

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,13 @@ deps =
     coverage
 commands = nosetests --show-skipped --with-coverage {posargs}
 
+[testenv:py35cov]
+basepython = python3.5
+deps =
+    {[testenv]deps}
+    coverage
+commands = nosetests --show-skipped --with-coverage {posargs}
+
 [testenv:docs]
 changedir = docs
 deps = sphinx
