Run flake8 tests for python 2.7 and 3.5 separately

--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,16 @@ changedir = docs
 deps = sphinx
 commands = sphinx-build -W -q -b html . {envtmpdir}/html
 
-[testenv:flake8]
+[testenv:py27flake8]
+basepython = python2.7
+deps =
+    flake8
+    flake8-future-import
+    pep8-naming
+commands = flake8 beets beetsplug beet test setup.py docs
+
+[testenv:py35flake8]
+basepython = python3.5
 deps =
     flake8
     flake8-future-import
