--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,18 @@ matrix:
     include:
         - python: 2.7
           env: {TOX_ENV: py27cov, COVERAGE: 1}
+        - python: 3.5
+          env: {TOX_ENV: py35cov, COVERAGE: 1}
         - python: pypy
           env: {TOX_ENV: pypy}
         - python: 2.7
           env: {TOX_ENV: docs, NONTEST: 1}
         - python: 2.7
-          env: {TOX_ENV: flake8, NONTEST: 1}
+          env: {TOX_ENV: py27flake8, NONTEST: 1}
+        - python: 3.5
+          env: {TOX_ENV: py35flake8, NONTEST: 1}
+    allow_failures:
+        - python: 3.5
 
 # Non-Python dependencies.
 addons:
