--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,12 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27cov, py35cov, docs, py27flake8, py35flake8
+envlist = py{27,33,34,35}-test, pypy{,3}-test, flake8, docs
 
 [testenv]
+basepython =
+    flake8: python2.7
+    docs: python2.7
 deps =
     beautifulsoup4
     flask
@@ -21,39 +24,14 @@ deps =
     pyxdg
     jellyfish
     python-mpd2
-commands = nosetests {posargs}
-
-[testenv:py27cov]
-basepython = python2.7
-deps =
-    {[testenv]deps}
-    coverage
-commands = nosetests --show-skipped --with-coverage {posargs}
-
-[testenv:py35cov]
-basepython = python3.5
-deps =
-    {[testenv]deps}
-    coverage
-commands = nosetests --show-skipped --with-coverage {posargs}
-
-[testenv:docs]
-changedir = docs
-deps = sphinx
-commands = sphinx-build -W -q -b html . {envtmpdir}/html
-
-[testenv:py27flake8]
-basepython = python2.7
-deps =
-    flake8
-    flake8-future-import
-    pep8-naming
-commands = flake8 beets beetsplug beet test setup.py docs
-
-[testenv:py35flake8]
-basepython = python3.5
-deps =
-    flake8
-    flake8-future-import
-    pep8-naming
-commands = flake8 beets beetsplug beet test setup.py docs
+    test: coverage
+    docs: sphinx
+    flake8: flake8
+    flake8: flake8-future-import
+    flake8: pep8-naming
+commands =
+    test: nosetests --show-skipped --with-coverage {posargs}
+    docs: sphinx-build -W -q -b html . {envtmpdir}/html
+    flake8: flake8 beets beetsplug beet test setup.py docs
+changedir =
+    docs: docs
