--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,10 +5,13 @@ deploy: off
 environment:
     matrix:
         - PYTHON: C:\Python27
-          TOX_ENV: py27cov
+          TOX_ENV: py27-test
+        - PYTHON: C:\Python33
+          TOX_ENV: py33-test
+        - PYTHON: C:\Python34
+          TOX_ENV: py33-test
         - PYTHON: C:\Python35
-          TOX_ENV: py35cov
-
+          TOX_ENV: py33-test
 # Install Tox for running tests.
 install:
     - "%PYTHON%/Scripts/pip.exe install tox"
@@ -20,5 +23,7 @@ test_script:
 # Allow all failures for now: the tests don't yet pass!
 matrix:
     allow_failures:
-        - TOX_ENV: py27cov
-        - TOX_ENV: py35cov
+        - TOX_ENV: py27-test
+        - TOX_ENV: py33-test
+        - TOX_ENV: py34-test
+        - TOX_ENV: py35-test
