--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{27,33,34,35}-test, pypy{,3}-test, flake8, docs
+envlist = py{27,33,34,35}-test, py{27,33}-flake8, pypy{,3}-test, docs
 
 [testenv]
 deps =
@@ -23,12 +23,23 @@ deps =
     python-mpd2
     test: coverage
     docs: sphinx
-    flake8: flake8
-    flake8: flake8-future-import
-    flake8: pep8-naming
+changedir =
+    docs: docs
 commands =
     test: nosetests --show-skipped --with-coverage {posargs}
     docs: sphinx-build -W -q -b html . {envtmpdir}/html
-    flake8: flake8 beets beetsplug beet test setup.py docs
-changedir =
-    docs: docs
+
+# This is used as a list of dependencies for py27-flake8 and py33-flake8.
+[flake8]
+deps =
+    flake8
+    flake8-future-import
+    pep8-naming
+
+[testenv:py27-flake8]
+deps = {[flake8]deps}
+commands = flake8 --min-version 2.7 beets beetsplug beet test setup.py docs
+
+[testenv:py33-flake8]
+deps = {[flake8]deps}
+commands = flake8 --min-version 3.3 beets beetsplug beet test setup.py docs
