Remove pypy3 tests due to it being too old

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{27,33,34,35}-test, py{27,33}-flake8, pypy{,3}-test, docs
+envlist = py{27,33,34,35}-test, py{27,33}-flake8, pypy-test, docs
 
 [testenv]
 deps =
