Tidy up tox.ini and separate dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 [tox]
 envlist = py{27,33,34,35}-test, py{27,33}-flake8, pypy-test, docs
 
-[testenv]
+[testenv:py{27,33,34,35}-test]
 deps =
     beautifulsoup4
     flask
@@ -21,25 +21,24 @@ deps =
     pyxdg
     jellyfish
     python-mpd2
-    test: coverage
-    docs: sphinx
-changedir =
-    docs: docs
-commands =
-    test: nosetests --show-skipped --with-coverage {posargs}
-    docs: sphinx-build -W -q -b html . {envtmpdir}/html
+    coverage
+commands = nosetests --show-skipped --with-coverage {posargs}
 
-# This is used as a list of dependencies for py27-flake8 and py33-flake8.
-[flake8]
+[testenv:docs]
+deps = sphinx
+changedir = docs
+commands = sphinx-build -W -q -b html . {envtmpdir}/html
+
+[testenv:py27-flake8]
 deps =
     flake8
     flake8-future-import
     pep8-naming
-
-[testenv:py27-flake8]
-deps = {[flake8]deps}
 commands = flake8 --min-version 2.7 beets beetsplug beet test setup.py docs
 
 [testenv:py33-flake8]
-deps = {[flake8]deps}
+deps =
+    flake8
+    flake8-future-import
+    pep8-naming
 commands = flake8 --min-version 3.3 beets beetsplug beet test setup.py docs
