--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,9 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py{27,33,34,35}-test, py{27,33}-flake8, pypy-test, docs
+envlist = test, flake8, docs
 
-[testenv:py{27,33,34,35}-test]
+[testenv]
 deps =
     beautifulsoup4
     flask
@@ -27,18 +27,20 @@ commands = nosetests --show-skipped --with-coverage {posargs}
 [testenv:docs]
 deps = sphinx
 changedir = docs
-commands = sphinx-build -W -q -b html . {envtmpdir}/html
+commands = sphinx-build -W -q -b html . {envtmpdir}/html {posargs}
+
+[testenv:flake8]
+deps =
+    flake8
+    flake8-future-import
+    pep8-naming
+files = flake8 beets beetsplug beet test setup.py docs
+commands = flake8 --min-version 2.7 {posargs} {[testenv:flake8]files}
 
 [testenv:py27-flake8]
-deps =
-    flake8
-    flake8-future-import
-    pep8-naming
-commands = flake8 --min-version 2.7 beets beetsplug beet test setup.py docs
+deps = {[testenv:flake8]deps}
+commands = flake8 --min-version 2.7 {posargs} {[testenv:flake8]files}
 
 [testenv:py33-flake8]
-deps =
-    flake8
-    flake8-future-import
-    pep8-naming
-commands = flake8 --min-version 3.3 beets beetsplug beet test setup.py docs
+deps = {[testenv:flake8]deps}
+commands = flake8 --min-version 3.3 {posargs} {[testenv:flake8]files}
