Remove erroneous flake8 from file list

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps =
     flake8
     flake8-future-import
     pep8-naming
-files = flake8 beets beetsplug beet test setup.py docs
+files = beets beetsplug beet test setup.py docs
 commands = flake8 --min-version 2.7 {posargs} {[testenv:flake8]files}
 
 [testenv:py27-flake8]
