--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 [tox]
 envlist = test, flake8, docs
 
-[testenv]
+[_test]
 deps =
     beautifulsoup4
     flask
@@ -22,25 +22,24 @@ deps =
     jellyfish
     python-mpd2
     coverage
-commands = nosetests --show-skipped --with-coverage {posargs}
 
-[testenv:docs]
-deps = sphinx
-changedir = docs
-commands = sphinx-build -W -q -b html . {envtmpdir}/html {posargs}
-
-[testenv:flake8]
+[_flake8]
 deps =
     flake8
     flake8-future-import
     pep8-naming
 files = beets beetsplug beet test setup.py docs
-commands = flake8 --min-version 2.7 {posargs} {[testenv:flake8]files}
 
-[testenv:py27-flake8]
-deps = {[testenv:flake8]deps}
-commands = flake8 --min-version 2.7 {posargs} {[testenv:flake8]files}
+[testenv]
+basepython = python2.7
+deps =
+    test: {[_test]deps}
+    flake8: {[_flake8]deps}
+commands =
+    test: nosetests {posargs}
+    flake8: flake8 {posargs:--min-version=2.7} {[_flake8]files}
 
-[testenv:py33-flake8]
-deps = {[testenv:flake8]deps}
-commands = flake8 --min-version 3.3 {posargs} {[testenv:flake8]files}
+[testenv:docs]
+basepython = python2.7
+deps = sphinx
+commands = sphinx-build -W -q -b html docs {envtmpdir}/html {posargs}
