--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = test, flake8, docs
+envlist = py{27,33,34,35}-{test,cov}, py{27,33}-flake8, docs
 
 [_test]
 deps =
@@ -31,12 +31,21 @@ deps =
 files = beets beetsplug beet test setup.py docs
 
 [testenv]
+basepython =
+    py27: python2.7
+    py33: python3.3
+    py34: python3.4
+    py35: python3.5
+passenv =
+    NOSE_SHOW_SKIPPED # Undocumented feature of nose-show-skipped.
 deps =
-    test: {[_test]deps}
-    flake8: {[_flake8]deps}
+    {test,cov}: {[_test]deps}
+    py{27,33}-flake8: {[_flake8]deps}
 commands =
+    cov: nosetests --with-coverage {posargs}
     test: nosetests {posargs}
-    flake8: flake8 {posargs:--min-version=2.7} {[_flake8]files}
+    py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
+    py33-flake8: flake8 --min-version 3.3 {posargs} {[_flake8]files}
 
 [testenv:docs]
 basepython = python2.7
