Re-add min-version for flake8 in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ logging-clear-handlers=1
 eval-attr="!=slow"
 
 [flake8]
+min-version=2.7
 # Default pyflakes errors we ignore:
 # - E241: missing whitespace after ',' (used to align visually)
 # - E221: multiple spaces before operator (used to align visually)
