--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,21 @@ env:
 matrix:
     include:
         - python: 2.7
-          env: {TOX_ENV: py27-cov, COVERAGE: 1}
+          env: {TOXENV: py27-cov, COVERAGE: 1}
         - python: 3.3
-          env: {TOX_ENV: py33-test}
+          env: {TOXENV: py33-test}
         - python: 3.4
-          env: {TOX_ENV: py34-test}
+          env: {TOXENV: py34-test}
         - python: 3.5
-          env: {TOX_ENV: py35-test}
+          env: {TOXENV: py35-test}
         - python: pypy
-          env: {TOX_ENV: pypy-test}
+          env: {TOXENV: pypy-test}
         - python: 2.7
-          env: {TOX_ENV: py27-flake8}
+          env: {TOXENV: py27-flake8}
         - python: 3.3
-          env: {TOX_ENV: py33-flake8}
+          env: {TOXENV: py33-flake8}
         - python: 2.7
-          env: {TOX_ENV: docs}
+          env: {TOXENV: docs}
     allow_failures:
         - python: 3.3
         - python: 3.4
@@ -39,9 +39,9 @@ addons:
 # To install dependencies, tell tox to do everything but actually running the
 # test.
 install:
-    - travis_retry python setup.py test -a "-e $TOX_ENV --notest"
+    - travis_retry python setup.py test -a "--notest"
 
-script: python setup.py test -a "-e $TOX_ENV"
+script: python setup.py test
 
 # Report coverage to codecov.io.
 before_install:
