--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,24 +8,24 @@ environment:
 
     matrix:
         - PYTHON: C:\Python27
-          TOX_ENV: py27-test
+          TOXENV: py27-test
         - PYTHON: C:\Python33
-          TOX_ENV: py33-test
+          TOXENV: py33-test
         - PYTHON: C:\Python34
-          TOX_ENV: py34-test
+          TOXENV: py34-test
         - PYTHON: C:\Python35
-          TOX_ENV: py35-test
+          TOXENV: py35-test
 
 # Install Tox for running tests.
 install:
-    - python setup.py test -a "-e %TOX_ENV% --notest"
+    - python setup.py test -a "--notest"
 
 test_script:
-    - python setup.py test -a "-e %TOX_ENV%"
+    - python setup.py test
 
 # Allow all failures for now: the tests don't yet pass!
 matrix:
     allow_failures:
-        - TOX_ENV: py33-test
-        - TOX_ENV: py34-test
-        - TOX_ENV: py35-test
+        - TOXENV: py33-test
+        - TOXENV: py34-test
+        - TOXENV: py35-test
