--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ min-version=2.7
 # - E241: missing whitespace after ',' (used to align visually)
 # - E221: multiple spaces before operator (used to align visually)
 # - E731: do not assign a lambda expression, use a def
+# - F405 object may be undefined, or defined from star imports
 # - C901: function/method complexity
 # `flake8-future-import` errors we ignore:
 # - FI50: `__future__` import "division" present
@@ -17,4 +18,4 @@ min-version=2.7
 # - FI53: `__future__` import "print_function" present
 # - FI14: `__future__` import "unicode_literals" missing
 # - FI15: `__future__` import "generator_stop" missing
-ignore=C901,E241,E221,E731,FI50,FI51,FI12,FI53,FI14,FI15
+ignore=C901,E241,E221,E731,F405,FI50,FI51,FI12,FI53,FI14,FI15
