--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
           env: {TOX_ENV: py34-test}
         - python: 3.5
           env: {TOX_ENV: py35-test}
-        - python: pypy
-          env: {TOX_ENV: pypy-test}
+        # - python: pypy
+        #   - env: {TOX_ENV: pypy-test}
         - python: 2.7
           env: {TOX_ENV: py27-flake8}
         - python: 3.3
