--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ addons:
         packages:
             - bash-completion
             - mp3gain
+            - unrar
 
 # To install dependencies, tell tox to do everything but actually running the
 # test.
