--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ addons:
     apt:
         packages:
             - bash-completion
+            - bs1770gain
             - mp3gain
             - unrar
 
