switch travis env to trusty tahir (14.04)
[skip appveyor]

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
+dist: trusty
+sudo: required
 language: python
-sudo: false
 
 env:
     global:
@@ -29,6 +30,9 @@ matrix:
 # Non-Python dependencies.
 addons:
     apt:
+        sources:
+            - sourceline: "deb http://archive.ubuntu.com/ubuntu/ trusty multiverse"
+            - sourceline: "deb http://archive.ubuntu.com/ubuntu/ trusty-updates multiverse"
         packages:
             - bash-completion
             - mp3gain
