--- a/tox.ini
+++ b/tox.ini
@@ -39,8 +39,10 @@ deps =
     {test,cov}: {[_test]deps}
     py{27,34}-flake8: {[_flake8]deps}
 commands =
-    cov: nosetests --with-coverage {posargs}
-    test: nosetests {posargs}
+    py27-cov: nosetests --with-coverage {posargs}
+    py27-test: nosetests {posargs}
+    py{34,35}-cov: python -bb -m nose --with-coverage {posargs}
+    py{34,35}-test: python -bb -m nose {posargs}
     py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
     py34-flake8: flake8 --min-version 3.4 {posargs} {[_flake8]files}
 
