use -m nose for tests on python 2.x too

--- a/tox.ini
+++ b/tox.ini
@@ -39,8 +39,8 @@ deps =
     {test,cov}: {[_test]deps}
     py{27,34}-flake8: {[_flake8]deps}
 commands =
-    py27-cov: nosetests --with-coverage {posargs}
-    py27-test: nosetests {posargs}
+    py27-cov: python -m nose --with-coverage {posargs}
+    py27-test: python -m nose {posargs}
     py{34,35}-cov: python -bb -m nose --with-coverage {posargs}
     py{34,35}-test: python -bb -m nose {posargs}
     py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
