don't install pathlib on py 2.7
Fixes #2105

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,6 @@ deps =
     pylast
     rarfile
     responses>=0.3.0
-    pathlib
     pyxdg
     jellyfish
     python-mpd2
@@ -37,6 +36,7 @@ passenv =
     NOSE_SHOW_SKIPPED # Undocumented feature of nose-show-skipped.
 deps =
     {test,cov}: {[_test]deps}
+    py27: pathlib
     py{27,34}-flake8: {[_flake8]deps}
 commands =
     py27-cov: python -m nose --with-coverage {posargs}
