--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,16 @@ addons:
             - sourceline: "deb http://archive.ubuntu.com/ubuntu/ trusty-updates multiverse"
         packages:
             - bash-completion
+            - gir1.2-gst-plugins-base-1.0
+            - gir1.2-gstreamer-1.0
+            - gstreamer1.0-plugins-good
+            - gstreamer1.0-plugins-bad
             - imagemagick
             - mp3gain
+            - python-gi
+            - python-gst-1.0
+            - python3-gi
+            - python3-gst-1.0
             - unrar
 
 # To install dependencies, tell tox to do everything but actually running the
