Switch from pathlib to pathlib2
Quoting the pathlib2 documentation:

> The old pathlib module on bitbucket is in bugfix-only mode. The goal of pathlib2 is to provide a backport of standard pathlib module which tracks the standard library module, so all the newest features of the standard pathlib can be used also on older Python versions.

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ passenv =
     NOSE_SHOW_SKIPPED # Undocumented feature of nose-show-skipped.
 deps =
     {test,cov}: {[_test]deps}
-    py27: pathlib
+    py27: pathlib2
     py{27,34}-flake8: {[_flake8]deps}
 commands =
     py27-cov: python -m nose --with-coverage {posargs}
