--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py27-test, py27-flake8, docs
 
 # The exhaustive list of environments is:
-# envlist = py{27,34,35}-{test,cov}, py{27,34}-flake8, docs
+# envlist = py{27,34,35}-{test,cov}, py{27,34,35}-flake8, docs
 
 [_test]
 deps =
@@ -37,7 +37,7 @@ passenv =
 deps =
     {test,cov}: {[_test]deps}
     py27: pathlib
-    py{27,34}-flake8: {[_flake8]deps}
+    py{27,34,35}-flake8: {[_flake8]deps}
 commands =
     py27-cov: python -m nose --with-coverage {posargs}
     py27-test: python -m nose {posargs}
@@ -45,6 +45,7 @@ commands =
     py{34,35}-test: python -bb -m nose {posargs}
     py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
     py34-flake8: flake8 --min-version 3.4 {posargs} {[_flake8]files}
+    py35-flake8: flake8 --min-version 3.5 {posargs} {[_flake8]files}
 
 [testenv:docs]
 basepython = python2.7
