--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ logging-clear-handlers=1
 
 [flake8]
 min-version=2.7
+accept-encodings=utf-8
 # Default pyflakes errors we ignore:
 # - E241: missing whitespace after ',' (used to align visually)
 # - E221: multiple spaces before operator (used to align visually)
