--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ deps =
 [_flake8]
 deps =
     flake8
+    flake8-coding
     flake8-future-import
     pep8-naming
 files = beets beetsplug beet test setup.py docs
