add -y to cinst command in appveyor.yml
[ci skip]

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ environment:
 
 # Install Tox for running tests.
 install:
-    - cinst imagemagick
+    - cinst imagemagick -y
     - "%PYTHON%/Scripts/pip.exe install tox"
     - "%PYTHON%/Scripts/tox.exe -e %TOX_ENV% --notest"
 
