--- a/tox.ini
+++ b/tox.ini
@@ -38,15 +38,16 @@ passenv =
 deps =
     {test,cov}: {[_test]deps}
     py27: pathlib
-    py{27,34,35}-flake8: {[_flake8]deps}
+    py{27,34,35,36}-flake8: {[_flake8]deps}
 commands =
     py27-cov: python -m nose --with-coverage {posargs}
     py27-test: python -m nose {posargs}
     py{34,35}-cov: python -bb -m nose --with-coverage {posargs}
-    py{34,35}-test: python -bb -m nose {posargs}
+    py{34,35,36}-test: python -bb -m nose {posargs}
     py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
     py34-flake8: flake8 --min-version 3.4 {posargs} {[_flake8]files}
     py35-flake8: flake8 --min-version 3.5 {posargs} {[_flake8]files}
+    py36-flake8: flake8 --min-version 3.6 {posargs} {[_flake8]files}
 
 [testenv:docs]
 basepython = python2.7
