Ignore a new flake8 style warning
It's always fun when the style checker suddenly decides something new is bad
style. :/

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ accept-encodings=utf-8
 # - E731: do not assign a lambda expression, use a def
 # - F405 object may be undefined, or defined from star imports
 # - C901: function/method complexity
+# - E305: spacing after a declaration (might be nice to change eventually)
 # `flake8-future-import` errors we ignore:
 # - FI50: `__future__` import "division" present
 # - FI51: `__future__` import "absolute_import" present
@@ -18,4 +19,4 @@ accept-encodings=utf-8
 # - FI53: `__future__` import "print_function" present
 # - FI14: `__future__` import "unicode_literals" missing
 # - FI15: `__future__` import "generator_stop" missing
-ignore=C901,E241,E221,E731,F405,FI50,FI51,FI12,FI53,FI14,FI15
+ignore=E305,C901,E241,E221,E731,F405,FI50,FI51,FI12,FI53,FI14,FI15
