--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py27-test, py36-test, py27-flake8, docs
 
 # The exhaustive list of environments is:
-# envlist = py{27,34,35}-{test,cov}, py{27,34,35}-flake8, docs
+# envlist = py{27,34,35}-{test,cov}, py{27,34,35}-flake8, py{27,34,35}-testwin32, docs
 
 [_test]
 deps =
@@ -37,14 +37,17 @@ files = beets beetsplug beet test setup.py docs
 passenv =
     NOSE_SHOW_SKIPPED # Undocumented feature of nose-show-skipped.
 deps =
-    {test,cov}: {[_test]deps}
+    {test,testwin32,cov}: {[_test]deps}
+    test: xmlunittest
     py27: pathlib
     py{27,34,35,36}-flake8: {[_flake8]deps}
 commands =
     py27-cov: python -m nose --with-coverage {posargs}
     py27-test: python -m nose {posargs}
+    py27-testwin32: python -m nose --ignore-files="test_web_subsonic" {posargs}
     py{34,35}-cov: python -bb -m nose --with-coverage {posargs}
     py{34,35,36}-test: python -bb -m nose {posargs}
+    py{34,35,36}-testwin32: python -bb -m nose --ignore-files="test_web_subsonic" {posargs}
     py27-flake8: flake8 --min-version 2.7 {posargs} {[_flake8]files}
     py34-flake8: flake8 --min-version 3.4 {posargs} {[_flake8]files}
     py35-flake8: flake8 --min-version 3.5 {posargs} {[_flake8]files}
