Also add xmlunittest to test coverage

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ passenv =
     NOSE_SHOW_SKIPPED # Undocumented feature of nose-show-skipped.
 deps =
     {test,testwin32,cov}: {[_test]deps}
-    test: xmlunittest
+    {test,cov}: xmlunittest
     py27: pathlib
     py{27,34,35,36}-flake8: {[_flake8]deps}
 commands =
