Put plugin into subfolder because of font

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -34,3 +34,6 @@ include beets/ui/completion_base.sh
 
 # Include extra bits
 recursive-include extra *
+
+# Resources for the mosaic plugin.
+include beetsplug/mosaic/FreeSans.ttf
