small changes for the bell issue

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -25,7 +25,7 @@ import:
     pretend: false
     search_ids: []
     duplicate_action: ask
-    bell: yes  
+    bell: no  
 
 clutter: ["Thumbs.DB", ".DS_Store"]
 ignore: [".*", "*~", "System Volume Information", "lost+found"]
