Add `multivalue_separator` config option so '; ' is not hardcoded anymore
Use the `multivalue_separator` config option whenever splitting or
joining multivalue fields

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -44,6 +44,7 @@ path_sep_replace: _
 asciify_paths: false
 art_filename: cover
 max_filename_length: 0
+multivalue_separator: '; '
 
 plugins: []
 pluginpath: []
