implement custom tag mapping

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -129,4 +129,54 @@ match:
     track_length_max: 30
 
 map:
-    lyrics: lyrics
+    title: [TITLE]
+    artist: [ARTIST]
+    album: [ALBUM]
+    genre: [GENRE]
+    lyricist: [LYRICIST]
+    composer: [COMPOSER]
+    composer_sort: [COMPOSERSORT]
+    arranger: [ARRANGER]
+    grouping: [GROUPING]
+    track: [TRACK, TRACKNUMBER]
+    tracktotal: [TRACKTOTAL, TRACKC, TOTALTRACKS]
+    disc: [DISC DISCNUMBER]
+    disctotal: [DISCTOTAL, DISCC, TOTALDISCS]
+    lyrics: [LYRICS]
+    comments: [DESCRIPTION, COMMENT]
+    bpm: [BPM]
+    comp: [COMPILATION]
+    albumartist: [ALBUM ARTIST, ALBUMARTIST]
+    albumtype: [MUSICBRAINZ_ALBUMTYPE]
+    label: [LABEL, PUBLISHER]
+    artist_sort: [ARTISTSORT]
+    albumartist_sort: [ALBUMARTISTSORT]
+    asin: [ASIN]
+    catalognum: [CATALOGNUMBER]
+    disctitle: [DISCSUBTITLE]
+    encoder: [ENCODEDBY, ENCODER]
+    script: [SCRIPT]
+    language: [LANGUAGE]
+    country: [RELEASECOUNTRY]
+    albumstatus: [MUSICBRAINZ_ALBUMSTATUS]
+    media: [MEDIA]
+    albumdisambig: [MUSICBRAINZ_ALBUMCOMMENT]
+    date: [DATE]
+    year: [YEAR]
+    original_date: [ORIGINALDATE]
+    artist_credit: [ARTIST_CREDIT]
+    albumartist_credit: [ALBUMARTIST_CREDIT]
+    mb_trackid: [MUSICBRAINZ_TRACKID]
+    mb_albumid: [MUSICBRAINZ_ALBUMID]
+    mb_artistid: [MUSICBRAINZ_ARTISTID]
+    mb_albumartistid: [MUSICBRAINZ_ALBUMARTISTID]
+    mb_releasegroupid: [MUSICBRAINZ_RELEASEGROUPID]
+    acoustid_fingerprint: [ACOUSTID_FINGERPRINT]
+    acoustid_id: [ACOUSTID_ID]
+    rg_track_gain: [REPLAYGAIN_TRACK_GAIN]
+    rg_album_gain: [REPLAYGAIN_ALBUM_GAIN]
+    rg_track_peak: [REPLAYGAIN_TRACK_PEAK]
+    rg_album_peak: [REPLAYGAIN_ALBUM_PEAK]
+    r128_track_gain: [R128_TRACK_GAIN]
+    r128_album_gain: [R128_ALBUM_GAIN]
+    initial_key: [INITIALKEY]
