Travis: run 3.7 on Xenial
According to this comment:
https://github.com/travis-ci/travis-ci/issues/9815#issuecomment-402045581

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
           env: {TOX_ENV: py36-test}
         - python: 3.7
           env: {TOX_ENV: py37-test}
+          dist: xenial
         # - python: pypy
         #   - env: {TOX_ENV: pypy-test}
         - python: 3.4
