Split release and release-group disambiguation into separate fields.

--- a/beets/config_default.yaml
+++ b/beets/config_default.yaml
@@ -50,7 +50,7 @@ max_filename_length: 0
 
 aunique:
     keys: albumartist album
-    disambiguators: albumtype year label catalognum albumdisambig
+    disambiguators: albumtype year label catalognum albumdisambig releasegroupdisambig
     bracket: '[]'
 
 
